manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    env: dev
  ports:
    - port: 80 # The port on which the Service listens
      protocol: TCP
      targetPort: 8000 # The port on which the pods of the selected app are listening
  type: LoadBalancer
