manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: kuber-service
              port:
                number: 80
