manifests/ingress_redirection.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress-redirection
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /otusapp/([^/]+)(/.*)$
          pathType: ImplementationSpecific
          backend:
            service:
              name: kuber-service
              port:
                number: 80
